[package]
name = "tracing-subscriber-reload-arcswap"
version = "0.1.1"
edition = "2024"
# Rust 1.85 is the first stable release that supports the 2024 edition.
rust-version = "1.85.0"
authors = ["Michael Ingley <michael.ingley@gmail.com>"]
license = "MIT"
description = "Lock-free reload layer for tracing-subscriber using ArcSwap."
readme = "README.md"
repository = "https://github.com/mikasd/tracing-subscriber-reload-arcswap"
keywords = ["tracing", "logging", "subscriber", "reload", "arcswap"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[dependencies]
arc-swap = "1.7"
tracing-core = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "registry"] }
tracing-log = { version = "0.2.0", optional = true, default-features = false, features = ["log-tracer", "std"] }

[features]
default = []
tracing-log = ["dep:tracing-log"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
rayon = "1.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "fmt", "registry"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "reload"
harness = false
